[feat]: Add voting
